# rustrest

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  test.http
.github/workflows/: ci.yml
autobahn/: fuzzingclient.json
docs/: websocket-production.md
docs/benchmarks/: websocket-acceptance.md  websocket-reference.md
docs/superpowers/plans/: 2026-06-10-production-websocket-core.md  2026-06-10-production-websocket-rooms-broker.md  2026-06-10-production-websocket-validation.md  2026-06-10-production-websocket.md
docs/superpowers/specs/: 2026-06-09-rustrest-v0.2-design.md  2026-06-10-production-websocket-design.md
examples/: api.rs  basic.rs  websocket.rs  websocket_load.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: broker_publication.rs  event_json.rs  handshake.rs  room_target.rs
scripts/: check-autobahn-report.py  run-autobahn.sh  run-websocket-reference-profile.sh
src/: api.rs  app.rs  lib.rs  main.rs  users.rs
src/app/: cookie.rs  error.rs  extract.rs  form.rs  handler.rs  middleware.rs  openapi.rs  request.rs  response.rs  router.rs  server.rs  session.rs  sse.rs  state.rs  testing.rs  tests.rs  tls.rs  trie.rs  websocket.rs
src/app/websocket/: broker.rs  config.rs  driver.rs  error.rs  hub.rs  runtime.rs  socket.rs  tests.rs  types.rs
tests/: http_integration.rs  tls_integration.rs  websocket_api_compat.rs  websocket_integration.rs
