[package]
name = "rustrest"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
futures-util = "0.3"
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form = "0.2"
serde_urlencoded = "0.7"
sha1 = "0.10"
