[package]
name = "rustrest"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A minimal Express-style HTTP framework for Rust, built on hyper and tokio."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/rustrest"
keywords = ["http", "web", "framework", "hyper", "tokio"]
categories = ["web-programming::http-server", "network-programming"]
exclude = ["AGENTS.md", "CLAUDE.md"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
futures-util = "0.3"
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_html_form = "0.2"
serde_urlencoded = "0.7"
sha1 = "0.10"
tokio-tungstenite = "0.29"
