[package]
name = "rustrest-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
rustrest = { path = ".." }

[[bin]]
name = "handshake"
path = "fuzz_targets/handshake.rs"
test = false
doc = false
bench = false

[[bin]]
name = "event_json"
path = "fuzz_targets/event_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "room_target"
path = "fuzz_targets/room_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "broker_publication"
path = "fuzz_targets/broker_publication.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
